# gameEngCoursework

./: .gitignore  CMakeLists.txt  Games Engineering Report.docx  README.md
engine/: engine.cpp  engine.h  system_resources.h
lab_7_platformer/: game.h  platformer_main.cpp
lab_7_platformer/components/: astar.cpp  astar.h  cmp_bullet.cpp  cmp_decision_tree.cpp  cmp_decision_tree.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_enemy_states.cpp  cmp_enemy_states.h  cmp_enemy_turret.cpp  cmp_health.cpp  cmp_health.h  cmp_hurt_player.cpp  cmp_hurt_player.h  cmp_pathfinding.cpp  cmp_pathfinding.h  cmp_physics.cpp  cmp_physics.h  cmp_player_abilities.cpp  cmp_player_physics.cpp  cmp_player_physics.h  cmp_scoring.cpp  cmp_scoring.h  cmp_scoring_manager.cpp  cmp_scoring_manager.h  cmp_sprite.cpp  cmp_sprite.h  cmp_state_machine.cpp  cmp_state_machine.h  cmp_steering.cpp  cmp_steering.h  cmp_text.cpp  cmp_text.h  steering_decisions.h  steering_states.cpp  steering_states.h
lab_7_platformer/scenes/: scene_level1.cpp  scene_level2.cpp  scene_level3.cpp  scene_menu.cpp  scene_menu2.cpp  scene_menu2.h
lib/sfml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SFML.sln  SFMLSharedTargets.cmake  cmake_install.cmake
lib/sfml/lib/Debug/: sfml-audio-d.exp  sfml-graphics-d.exp  (+4 more)
lib_ecm/: ecm.cpp  ecm.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
res/: level_1.txt  level_2.txt  level_3.txt
res/out of use/: level_blank.txt
sourceCode/: entity.cpp  entity.h  main.cpp  player.cpp
(+138 files in other folders)
